MouseArea: don't enter pressed state while invisible

Fixes: QTBUG-128577
Change-Id: Ib6d97450e8aa6e55531ff5a20d86105e4f2db565
Reviewed-by: Oliver Eftevaag <oliver.eftevaag@qt.io>
(cherry picked from commit c36c6881c703639ada2342b160b405474b7f57c6)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit ef1dc2a9ca1997b01acc4f5c70756cef6d3db1ab)
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>